# qt_add_qml_module_example

./: CMakeLists.txt  README.md  main.cpp  main.qml
Basic/: CMakeLists.txt  SButton.qml  SImageButton.qml  SSlider.qml  SText.qml  SToggleButton.qml
Pages/: Page.qml
Utilities/: CMakeLists.txt  Helper.js  SConstants.qml  STheme.qml  SUtilities.qml
Widgets/: CMakeLists.txt  SPopupVideoPlayer.qml  SVideoPlayer.qml  SignPad.cpp  SignPad.h
Widgets/private/: STiming.qml  SVideoPlayerAnimatedImage.qml  SVideoToolBar.qml
